minor css alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -7655,7 +7655,7 @@ readers do not read off random characters that represent icons */
 	}
 
 	.mobile-full-close {
-		margin-right: 31px;
+		margin-right: 34px;
 		margin-top: 0px;
 	}
 
